<package format="3">

  <name>grasping_msgs</name>
  <version>0.4.0</version>
  <description>
    Messages for describing objects and how to grasp them.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/grasping_msgs</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
